# pollhook_rs

./: .gitignore  Cargo.toml  README.md  config_webhook.yaml  exact.yaml  facebook_webhook.yaml
.github/workflows/: rust-test.yaml
src/: cache.rs  data_handler.rs  endpoint_handler.rs  main.rs  polling_handler.rs  verification_handler.rs  webhook_config.rs
src/data_handler/: data_config.rs  data_receiver.rs
src/polling_handler/: data_polling.rs  polling_config.rs
src/verification_handler/: extractors.rs  test.rs  verification.rs  verification_config.rs
