[package]
name = "webhook_poller"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.11.0-pre.5"
hex = "0.4.3"
log = "0.4.27"
env_logger = "0.11.8"
bytes = "1.10.1"
futures = "0.3.31"
chrono = "0.4.41"
serde_yaml = "0.9.34+deprecated"
moka = { version = "0.12", features = ["future"] }
tokio = "1.44.2"
